k8s/keycloak/keycloakdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloakdb
  name: keycloakdb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloakdb
  template:
    metadata:
      labels:
        app: keycloakdb
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: pass123
            - name: POSTGRES_USER
              value: keycloaddbuser
            - name: POSTGRES_DB
              value: keycloakdb
          image: postgres:16
          name: keycloakdb
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: kcdb-pvc2
      volumes:
        - name: kcdb-pvc2
          persistentVolumeClaim:
            claimName: kcdb-pvc2
