k8s/keycloak/keycloak-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: keycloak
  type: ClusterIP
