k8s/keycloak/keycloakdb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kcdb
  name: kcdb
  namespace: default
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: kcdb
  type: ClusterIP
